# Accelerator

./: README.md  pyproject.toml
environments/: Dockerfile
environments/gpu/: docker-compose.yaml
